# rinha-backend-2024-q1-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.development  README.md  docker-compose.yml
.sqlx/: query-0f074343bd982f632bc66ed90c239b041a73cdf1079616fc1cca4d18e7d44e63.json  query-218ba4cf3774b0cc69f2dab928eef1c999226fa3c859d3fb99036ee3adc06249.json  query-914fd04c962a682da160dcf1d06a6ff42702e57379d847ce5d963d2c3196ffa3.json  query-f231fcd8598e35c371dd9d12070dce0e11a33093dd604826c7dd6197d55c2a3b.json  query-fec93b2cfa5323ad87a6bb2840f8d3ecb258ba385f1b288f977346e7be2f646a.json
src/: main.rs
src/config/: database.rs  error_handler.rs  log.rs  mod.rs  services.rs  swagger.rs
src/controllers/: home.rs  mod.rs  not_found.rs  statement.rs  transaction.rs
src/dtos/: mod.rs  statement.rs  transaction.rs
src/error/: mod.rs
src/models/: statement.rs  transaction.rs
src/state/: mod.rs
