[package]
name = "rinha-backend-2"
version = "0.1.0"
edition = "2021"
authors = ["Wesley Ricardi <wesley.ricardi@outlook.com>"]
description = "Projeto de participação da rinha backend 2"
documentation = "https://github.com/wesleyricardi/rinha_backend_2/tree/master/docs"
readme = "https://github.com/wesleyricardi/rinha_backend_2/blob/master/README.md"
homepage = "http://localhost:8080/swagger-ui/#"
repository = "https://github.com/wesleyricardi/rinha_backend_2/"
license = "MIT"

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.34", features = ["alloc", "serde"] }
fern = "0.6.2"
log = "0.4.21"
owo-colors = "4.0.0"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "migrate", "runtime-tokio-rustls", "macros", "chrono", "time"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
